--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tivra",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,5 +13,14 @@
     "express": "^4.18.2",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amansoni599/Tivra_api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/amansoni599/Tivra_api/issues"
+  },
+  "homepage": "https://github.com/amansoni599/Tivra_api#readme",
+  "description": ""
 }
