--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "lodash": "^4.17.21",
     "mongodb": "^5.0.1",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "nodemon": "^2.0.20"
   },
   "repository": {
     "type": "git",
