--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "live-server": "^1.1.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.1",
