--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "compression": "^1.7.4",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "forever": "^4.0.3",
     "graphql": "^15.8.0",
     "graphql-compose": "^9.0.10",
     "graphql-mongoose-schemabuilder": "^1.0.10",
+    "jsonwebtoken": "^9.0.0",
     "live-server": "^1.1.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.1",
+    "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^2.0.20"
   },
   "repository": {
