--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,27 +1,53 @@
-name: Node.js CI
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version:  [15.x]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm install pm2 -g
-      - run: pm2 start app.js
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install --production
+
+      - name: Deploy to server
+        uses: appleboy/scp-action@master
+        with:
+          host: <YOUR_SERVER_HOST>
+          username: <YOUR_SERVER_USERNAME>
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: ./
+          target: /path/to/your/app
+
+      - name: Restart server
+        run: ssh <YOUR_SERVER_USERNAME>@<YOUR_SERVER_HOST> "pm2 restart <YOUR_APP_NAME>"
